--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -82,12 +82,11 @@
         android:text="@string/send"
         android:textAllCaps="true" />
 
-    <com.google.android.material.progressindicator.LinearProgressIndicator
+    <de.eloc.eloc_control_panel.widgets.ProgressIndicator
         android:id="@+id/progress_indicator"
-        android:layout_width="@dimen/auth_input_width"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:indeterminate="true" />
+        app:compact="true" />
 
     <View
         android:layout_width="match_parent"
