--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -121,13 +121,13 @@
                 android:layout_marginVertical="16dp"
                 android:text="@string/submit" />
 
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/progress_horizontal"
-                android:layout_width="@dimen/auth_input_width"
+            <de.eloc.eloc_control_panel.widgets.ProgressIndicator
+                android:id="@+id/progress_indicator"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:indeterminate="true" />
+                app:compact="true" />
 
         </LinearLayout>
 
