--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -36,30 +36,12 @@
             android:text="@string/instructions"
             android:textAlignment="center" />
 
-        <LinearLayout
-            android:id="@+id/progress_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16dp"
-            tools:visibility="gone">
-
-            <TextView
-                android:id="@+id/progress_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/applying_changes" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:indeterminate="true" />
-        </LinearLayout>
+        <de.eloc.eloc_control_panel.widgets.ProgressIndicator
+            android:id="@+id/progress_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:text="@string/applying_changes" />
 
         <ScrollView
             android:id="@+id/content_layout"
@@ -67,7 +49,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/bottom_bar_size"
             android:padding="16dp"
-            tools:visibility="visible">
+            tools:visibility="invisible">
 
             <LinearLayout
                 android:id="@+id/card_container"
