--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="actionbar">#29780f</color>
+    <color name="actionbar">#445A46</color>
     <color name="actionbar_icon">#21491D</color>
     <color name="black">@android:color/black</color>
     <color name="connected">#65d95b</color>
     <color name="critical_red">#f95d48</color>
     <color name="detector_settings_title">#b87410</color>
-    <color name="low_orange">#fe9901</color>
+    <color name="low_orange">#FD9309</color>
     <color name="low_storage">#ffc846</color>
-    <color name="normal_green">#44873e</color>
+    <color name="normal_green">#445A46</color>
     <color name="recorder_settings_title">#3e6f3a</color>
     <color name="user_label">#ffb300</color>
     <color name="white">@android:color/white</color>
