--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,19 @@
     android:gravity="center"
     tools:context=".activities.LoginActivity">
 
+    <de.eloc.eloc_control_panel.widgets.OfflineLayout
+        android:id="@+id/offline_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <de.eloc.eloc_control_panel.widgets.ProgressIndicator
         android:id="@+id/check_internet_access_progress_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:text="@string/checking_internet_connection" />
+        app:text="@string/checking_internet_connection"
+        tools:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/sign_in_layout"
@@ -24,7 +31,7 @@
         android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
-        tools:visibility="visible">
+        tools:visibility="invisible">
 
         <ImageView
             android:layout_width="64dp"
