--- a/app/src/main/res/layout/layout_progress_indicator.xml
+++ b/app/src/main/res/layout/layout_progress_indicator.xml
@@ -14,6 +14,8 @@
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAlignment="center"
         tools:text="Status message here" />
 
     <Space
@@ -22,6 +24,7 @@
         android:layout_height="16dp" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/linear_progress_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
