Check server if app must be updated

--- a/app/src/main/res/values/code_strings.xml
+++ b/app/src/main/res/values/code_strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="status_updates_url">http://128.199.206.198/ELOC/files/?C=M;O=D</string>
     <string name="instructions_url">https://wildlifebug.com</string>
+    <string name="store_url">https://play.google.com/store/apps/details?id=de.eloc.eloc_control_panel_2</string>
 </resources>
