--- a/app/src/main/res/layout/activity_bluetooth_settings.xml
+++ b/app/src/main/res/layout/activity_bluetooth_settings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.BluetoothSettingsActivity">
+    tools:context=".activities.themable.BluetoothSettingsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -23,6 +23,12 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
+        <Space
+            android:id="@+id/top_space"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <de.eloc.eloc_control_panel.widgets.ListItem
             android:id="@+id/associated_devices_item"
             android:layout_width="match_parent"
@@ -30,7 +36,7 @@
             android:layout_marginHorizontal="16dp"
             app:itemType="button"
             app:keyText="@string/paired_devices"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_space"
             app:valueText="@string/manage" />
 
         <com.google.android.material.divider.MaterialDivider
